--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@douyinfe/semi-ui": "^2.50.1",
     "@mitojs/browser": "^3.0.1",
     "@mitojs/react": "^3.0.1",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "prettier": "^3.1.1",
+    "rc-drawer": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "umi-request": "^1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -30,6 +34,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.71.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
